config.json: Multiple updates: * updated socialLinks in footer * updated type in socialLinks * updated __metadata in socialLinks * updated style in socialLinks * updated icon in socialLinks * updated altText in socialLinks * updated elementId in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -95,6 +95,15 @@
                 "showIcon": true
             },
             {
+                "label": "",
+                "altText": "Facebook",
+                "url": "/",
+                "showIcon": true,
+                "icon": "facebook",
+                "style": "link",
+                "elementId": ""
+            },
+            {
                 "type": "twitter",
                 "icon": "twitter",
                 "label": "",
