config.json: Multiple updates: * updated socialLinks in footer * updated __metadata in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -104,6 +104,15 @@
                 "elementId": ""
             },
             {
+                "label": "",
+                "altText": "Facebook",
+                "url": "/",
+                "showIcon": true,
+                "icon": "facebook",
+                "style": "link",
+                "elementId": ""
+            },
+            {
                 "type": "twitter",
                 "icon": "twitter",
                 "label": "",
